--- a/opdtacht003_HTML_layout_elementen/index.html
+++ b/opdtacht003_HTML_layout_elementen/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <!-- hier zet je de code in de head tags -->
+        <title>Viks semantic pagina </title>
+    </head>
+    <body>
 
+     
+      <header>
+      <h1>Viks page with different semantic elements</h1>
+      <p>These are the elements in header</p>
+      <nav>                                   
+        <ul>
+          <li>nav1</li>
+          <li>nav2</li>
+        </ul>
+      </nav>  
+    </header>
+
+    <main>
+    <article>
+    <section>
+      <h2>This is a header2 in the section1</h2>
+        <p>The text example in the section_1 </p>
+    </section>
+  </article>
+
+  <article>
+    <section>
+      <h3>This is a header3 in the section2</h3>
+      <aside>
+        <p>Viks photo aside:</p>
+        <img src="vik_photo.jpg" alt="Viks photo" width="300">
+      </aside>
+    </section>
+  </article>
+  </main>
+  
+    <footer>
+      <p>These are the elements in footer</p>
+    </footer>  
+  </article>
+   </body>
+</html>
