--- a/opdracht004_css/index.html
+++ b/opdracht004_css/index.html
@@ -1,1 +1,29 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Viks test pagine met CSS styles</title>
+    <link rel="stylesheet" type="text/css" href="/opdracht004_css/styles.css">
+</head>
+
+<body>
+    <h1>Page over Vik</h1>
+    <p>Hallo, Ik ben Vik en ik woon in Amsterdam. This pagagraphs checks body css style</p>
+
+    <div class="black-border">
+        <h3>The class to test class_style</h3>
+        <p> Viks paragraph to test the class styling </p>
+    </div>
+
+    <h2 id="green-background">Here will be a header with a green css id style background</h2>
+
+    <div class="link">
+        <p>here will be a link to webpage_2:</p>
+        <a href="WebPage2.html" target="_blank">Another page with styles</a>
+    </div>
+</body>
+
+</html>
