Opdracht met van tag added

--- a/opdracht005/index.html
+++ b/opdracht005/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Viks pagina met nav elementen</title>
+    <link rel="stylesheet" type="text/css" href="navstyle.css">
+</head>
+
+<body>
+    <h2>De pagina met kastelen en dorpen lijsten</h2>
+
+    <nav>
+        <ul class="test">
+            <li><a href="https://en.wikipedia.org/wiki/Muiden_Castle" target="_blank">Muiden slot</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/De_Haar_Castle" target="_blank">De Haar</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Het_Loo_Palace" target="_blank">Het Loo</a></li>
+        </ul>
+    </nav>
+
+    <h2>The ordered List without nav bar</h2>
+    <ol>
+        <li><a href="https://en.wikipedia.org/wiki/Muiden_Castle" target="_blank">Muiden slot</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/De_Haar_Castle" target="_blank">De Haar</a></li>
+        <li><a href="https://en.wikipedia.org/wiki/Het_Loo_Palace" target="_blank">Het Loo</a></li>
+    </ol>
+
+</body>
+
+</html>
