--- a/opdracht007_Forms/index.html
+++ b/opdracht007_Forms/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+    <!-- hier zet je de code in de head tags -->
+    <title>Viks index pagina </title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+
+<body>
+
+    <header>
+        <h1>Viks page</h1>
+        <h2>Hallo, Ik ben Vik en ik woon in Amsterdam. This pagina checks the nav styles and resizing<h2>
+    </header>
+    <main>
+        <nav>
+            <ul class="test">
+                <li><a href="https://en.wikipedia.org/wiki/Muiden_Castle" target="_blank">Muiden slot</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/De_Haar_Castle" target="_blank">De Haar</a></li>
+                <li><a href="https://en.wikipedia.org/wiki/Het_Loo_Palace" target="_blank">Het Loo</a></li>
+            </ul>
+        </nav>
+
+        <h3 box-2>The ordered List without nav bar</h3>
+        <ol>
+            <li><a href="https://en.wikipedia.org/wiki/Muiden_Castle" target="_blank">Muiden slot</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/De_Haar_Castle" target="_blank">De Haar</a></li>
+            <li><a href="https://en.wikipedia.org/wiki/Het_Loo_Palace" target="_blank">Het Loo</a></li>
+        </ol>
+
+        <a href="about.html" target="_blank">Hier is de pagina over mij</a>
+        <br>
+        <br>
+        <a href="ViksContacts.html" target="_blank">Hier is de pagina met contacts</a>
+    </main>
+</body>
+
+
+</html>
