--- a/domOpdracht/domOpdracht.html
+++ b/domOpdracht/domOpdracht.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ViksDomOpdracht</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="domOpdracht.js"></script>
 
 </head>
 
