--- a/domFinalOpdracht/domFinalOpdracht.html
+++ b/domFinalOpdracht/domFinalOpdracht.html
@@ -7,22 +7,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ViksDomFinalOpdracht</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="domFinalOpdracht.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
 </head>
 
 <body>
+    <!-- <p>Colors menu:</p>
+    <img src="menu.jpg" alt="menu" width="40" height="40" id="menu"> -->
 
 
+    <!-- <p>A menu icon:</p>
+    <div></div>
+    <div></div>
+    <div></div>
+    <br>
 
-    <p>Colors menu:</p>
-    <img src="menu.jpg" alt="menu" width="40" height="40" id="menu">
+    <button type="button" class="collapsible">Colors menu</button> -->
+    <!-- <div class="content"> -->
 
-    <ul id="colors">
+    <!-- <div class="topnav"> -->
+    <!-- <a href="#home" class="active">Colors selection</a> -->
+    <p>Colors selection:</p>
+
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+    </a>
+    <ul id="myColors">
         <li id="home">home</li>
         <li id="green">green</li>
         <li id="yellow">yellow</li>
         <li id="blue">blue</li>
     </ul>
+
+
+
+
+
+    <script src="domFinalOpdracht.js"></script>
+
+
+
+
 </body>
 
 </html>
