--- a/domFinalOpdracht/domFinalOpdracht.html
+++ b/domFinalOpdracht/domFinalOpdracht.html
@@ -17,15 +17,16 @@
     <h2 class="active">Colors selection</h2>
     <br>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
+        <img src="ham.png" height="150px" alt="">
     </a>
 
-
     <div id="list">
-        <p id="home" onclick="Home()">Home</p>
-        <p id="green" onclick="Green()">Green</p>
-        <p id="yellow" onclick="Yellow()">Yellow</p>
-        <p id="blue" onclick="Blue()">Blue</p>
+        <ul>
+            <li id="home" onclick="Home()">Home</li>
+            <li id="green" onclick="Green()">Green</li>
+            <li id="yellow" onclick="Yellow()">Yellow</li>
+            <li id="blue" onclick="Blue()">Blue</li>
+        </ul>
     </div>
 
 
